--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -1,65 +1,142 @@
-<div class="box box-warning">
-    <div class="box-header">
-        <h2 class="box-title">My Meeting Room <small id="messageAlert" style="color: orangered;"></small></h2>
-        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <div style="display: flex;">
-                <div style="flex: 1; text-align: center; margin: 15px;" class="hand btnShareVideo">
-                    <i class="glyphicon glyphicon-facetime-video "></i>
-                    <div>Video</div>
+<div id="meetingScreen" style="display: flex; flex-direction: column; margin-bottom: 40px;">
+    <div style="display: flex; flex: 1; background: black;">
+        <div style="flex: 5;">
+            <video id="activeVideo" style="width: 100%;; height: 700px;" autoplay playsinline></video>
+            <div style="position: absolute; bottom: 41px; left: 10px;" class="row">
+                <div class="col-md-1">
+                    <video id="myVideo" class="miniVideoStream"
+                        style="min-height: 100px; max-height: 100px;; margin-bottom: 5px;" autoplay playsinline></video>
                 </div>
-                <div style="flex: 1; text-align: center; margin: 15px;" class="hand btnShareAudio">
-                    <i class="fa fa-fw fa-microphone "></i>
-                    <div>Audio</div>
-                </div>
-                <div style="flex: 1; text-align: center; margin: 15px;" class="hand btnInviteUser">
-                    <i class="fa fa-fw fa-users "></i> 
-                    <div>Invite</div>
-                </div>
-                <div style="flex: 1; text-align: center; margin: 15px;" class="hand btnRecordMeeting">
-                    <i class="glyphicon glyphicon-record "></i>
-                    <div>Record</div>
-                </div>
-                <div style="flex: 1; text-align: center; margin: 15px; margin-left: 30px;" class="hand btnMeetingSignOut">
-                    <i class="fa fa-fw fa-sign-out "></i>
-                    <div>Sign&nbsp;Out</div>
-                </div>
-                <div style="flex: 1; text-align: center; margin: 15px; margin-left: 30px;" class="hand btnEndMeeting">
-                    <i class="fa fa-fw fa-sign-out "></i>
-                    <div>End&nbsp;Meeting</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.box-header -->
-    <div class="box-body" style="margin-top: 25px;"> 
-        <div style="display: flex;">
-            <div style="flex: 3; display: flex; flex-direction: column;">
-                <video id="activeVideo" style="width: 100%; background-color: lightseagreen;" autoplay playsinline></video>
-                <div style="display: flex; height: 150px; flex-wrap: nowrap; overflow-x: auto; margin-top: 10px;" class="videoBoxList">
-                </div>
-            </div>
-            <div style="flex: 1; margin-left: 10px; display: flex; flex-direction: column;">
-                <video id="myVideo" style="min-height: 100px; max-height: 100px; width: 100%; background-color: lightseagreen; margin-bottom: 5px;" autoplay playsinline></video>
-                <div style="flex: 1">
-                    <textarea id="allChatMessages" rows="15" style="width: 100%;"></textarea>
-                </div>
-                <div style="flex: 1">
-                    <select class="form-control selectChatTo">
-                        <option>All</option>
-                    </select>
-                </div>
-                <div style="flex: 1">
-                    <textarea id="chatMessageTxt" rows="3" style="width: 100%;"></textarea>
-                </div>
-                <div style="flex: 1" class="text-center">
-                    <button type="button" class="btn btn-info btnSendChat" style="margin-left: 10px;">
-                        <i class="fa fa-file-text-o"></i> Send Message</button>
+                <div class="col-md-1" style="margin-left: 100px;">
+                    <video id="screenVideo" class="miniVideoStream"
+                        style="min-height: 100px; max-height: 100px; margin-bottom: 5px;" autoplay playsinline></video>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="box-footer">
-        <div id="errorMsg"></div>
+    <div class="popBox"
+        style="position: absolute; bottom: 0; right: 20px; margin-top: 15px; display: flex; flex-direction: column;">
+        <div style="display: flex;">
+            <div style="display: flex; flex-direction: column; flex-wrap: wrap; overflow-y: auto; margin-top: 10px;"
+                class="videoBoxList"></div>
+            <div class="box box-success" id="myChatBox" style="width: 300px; margin-left: 10px;">
+                <div class="box-header ui-sortable-handle" style="cursor: move;">
+                    <i class="fa fa-comments-o"></i>
+
+                    <h3 class="box-title">Chat</h3>
+
+                    <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                        <div class="btn-group" data-toggle="btn-toggle">
+                            <button type="button" class="btn btn-default btn-sm active"><i
+                                    class="fa fa-square text-green"></i>
+                            </button>
+                            <button type="button" class="btn btn-default btn-sm"><i
+                                    class="fa fa-square text-red"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
+                    <div class="box-body chat" id="chat-box" style="overflow: hidden; width: auto; height: 250px;">
+                        <!-- chat item -->
+                        <div class="item">
+                            <img src="dist/img/user4-128x128.jpg" alt="user image" class="online">
+
+                            <p class="message">
+                                <a href="#" class="name">
+                                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
+                                    Mike Doe
+                                </a>
+                                I would like to meet you to discuss the latest news about
+                                the arrival of the new theme. They say it is going to be one the
+                                best themes on the market
+                            </p>
+                            <div class="attachment">
+                                <h4>Attachments:</h4>
+
+                                <p class="filename">
+                                    Theme-thumbnail-image.jpg
+                                </p>
+
+                                <div class="pull-right">
+                                    <button type="button" class="btn btn-primary btn-sm btn-flat">Open</button>
+                                </div>
+                            </div>
+                            <!-- /.attachment -->
+                        </div>
+                        <!-- /.item -->
+                        <!-- chat item -->
+                        <div class="item">
+                            <img src="dist/img/user3-128x128.jpg" alt="user image" class="offline">
+
+                            <p class="message">
+                                <a href="#" class="name">
+                                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
+                                    Alexander Pierce
+                                </a>
+                                I would like to meet you to discuss the latest news about
+                                the arrival of the new theme. They say it is going to be one the
+                                best themes on the market
+                            </p>
+                        </div>
+                        <!-- /.item -->
+                        <!-- chat item -->
+                        <div class="item">
+                            <img src="dist/img/user2-160x160.jpg" alt="user image" class="offline">
+
+                            <p class="message">
+                                <a href="#" class="name">
+                                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
+                                    Susan Doe
+                                </a>
+                                I would like to meet you to discuss the latest news about
+                                the arrival of the new theme. They say it is going to be one the
+                                best themes on the market
+                            </p>
+                        </div>
+                        <!-- /.item -->
+                    </div>
+                    <div class="slimScrollBar"
+                        style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 224.82px;">
+                    </div>
+                    <div class="slimScrollRail"
+                        style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;">
+                    </div>
+                </div>
+                <!-- /.chat -->
+                <div class="box-footer">
+                    <div class="input-group">
+                        <input class="form-control" placeholder="Type message...">
+
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="flex: 1">
+            <div class="btn-group pull-right">
+                <a class="btn btn-social-icon btn-dropbox btnToggleChat" title="Chat"
+                    style="z-index: 100000; margin-left: 10px;"><i class="fa fa-fw fa-wechat"></i></a>
+                <a class="btn btn-social-icon btn-dropbox btnToggleOtherUsers" title="Other Users"
+                    style="z-index: 100001; margin-left: 10px;"><i class="fa fa-fw fa-users"></i></a>
+            </div>
+        </div>
+    </div>
+
+    <div id="errorMsg" style="flex: 1; height: 35px;"></div>
+
+    <div class="blue text-center" style="position: absolute; bottom: 0; width: 100%; flex: 1; margin-top: 15px;">
+        <a class="btn btn-social-icon btn-bitbucket btnFullScreenAny" title="Full Screen"
+            forFullScreen="#meetingScreen"><i class="fa fa-arrows-alt"></i></a>
+        <a class="btn btn-social-icon btn-bitbucket btnShareVideo" title="Video"><i
+                class="glyphicon glyphicon-facetime-video"></i></a>
+        <a class="btn btn-social-icon btn-dropbox btnShareAudio" title="Audio"><i
+                class="fa fa-fw fa-microphone"></i></a>
+        <a class="btn btn-social-icon btn-flickr btnMeetingSignOut" title="Sign Out" style="margin-left: 50px;"><i
+                class="fa fa-fw fa-sign-out"></i></a>
+        <a class="btn btn-social-icon btn-foursquare btnEndMeeting" title="End Meeting"><i
+                class="fa fa-fw fa-sign-out"></i></a>
     </div>
 </div>
