--- a/home.html
+++ b/home.html
@@ -114,6 +114,13 @@
                 <i class="fa fa-upload"></i>
               </a>
             </li>
+            <li class="dropdown messages-menu myMeetingButtonGroup">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="fa fa-users"></i><span style="padding-left: 15px;">Meeting</span>
+              </a>
+              <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" id="myMeetings" style="max-height:700px; overflow-y:auto;">
+              </ul>
+            </li>
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -185,6 +192,7 @@
         <!-- /.tab-pane -->
       </div>
     </aside>
+
     <!-- /.control-sidebar -->
     <!-- Add the sidebar's background. This div must be placed
        immediately after the control sidebar -->
@@ -399,6 +407,7 @@
   <script src="js/meetingroom/screenShare.js"></script>
 
   <script src="js/meetingroom/meetingRoom.js"></script>
+  <script src="js/meetingroom/meetingLoader.js"></script>
 
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
@@ -456,7 +465,8 @@
   <script src="js/modules/ReportUI.js"></script>
   <script src="js/modules/ConferenceUI.js"></script>
 
-  <script src="js/modules/FacultyMeetingUI.js"></script>
+  <script src="js/meetingui/GenericMeetingUI.js"></script>
+  <script src="js/meetingui/FacultyMeetingUI.js"></script>
 
   <script src="js/events/global-events-others.js"></script>
   <script src="js/events/global-events-hr.js"></script>
