In Progress - Conference 360

--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -129,7 +129,9 @@
 
     <div class="blue text-center" style="position: absolute; bottom: 0; width: 100%; flex: 1; margin-top: 15px;">
         <a class="btn btn-social-icon btn-bitbucket btnFullScreenAny" title="Full Screen"
-            forFullScreen="#meetingScreen"><i class="fa fa-arrows-alt"></i></a>
+            forFullScreen="#meetingScreen"><i class="fa fa-expand"></i></a>
+        <a class="btn btn-social-icon btn-bitbucket btnMinimizeToRight" title="Minimize"
+            forFullScreen="#meetingScreen"><i class="fa fa-compress"></i></a>
         <a class="btn btn-social-icon btn-bitbucket btnShareVideo" title="Video"><i
                 class="glyphicon glyphicon-facetime-video"></i></a>
         <a class="btn btn-social-icon btn-dropbox btnShareAudio" title="Audio"><i
