--- a/home.html
+++ b/home.html
@@ -78,7 +78,6 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
                 <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
               </a>
-
               <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" style="max-height:700px; overflow-y:auto;">
                 <li><a href="#" class="leftMenuItem manageEmployee"><i class="fa fa-dashboard"></i> <span>Manage
                       Employee</span></a></li>
@@ -97,7 +96,6 @@
                 <li><a href="#" class="leftMenuItem manageSupplier"><i class="fa fa-dashboard"></i> <span>Manage
                       Supplier</span></a></li>
               </ul>
-
             </li>
             <li class="dropdown messages-menu" style="display: none;">
               <a href="#" class="pivotTable">
@@ -200,6 +198,17 @@
 
   </div>
   <!-- ./wrapper -->
+
+  <div style="position: absolute; top: 50px; right: 10px; display: flex;"> 
+    <div style="flex: 1;">
+      <video id="myVideoMinimize" style="min-height: 125px; max-height: 125px; margin-top: 0px; margin-bottom: -10px;" autoplay playsinline></video>
+    </div>
+    <div style="flex: 1; margin-left: 10px;">
+      <a href="#" class="pull-right btnToggleMiniVideo">
+        <i class="glyphicon glyphicon-facetime-video icon-flipped"></i><span style="padding-left: 15px;"></span>
+      </a>
+    </div>
+  </div>
 
   <div class="allModal" style="display: none;">
     <div class="modal" tabindex="-1" id="AutoReport" role="dialog" aria-labelledby="AutoReportLabel" aria-hidden="true">
