In Progress - Screen Sharing

--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -132,10 +132,22 @@
             forFullScreen="#meetingScreen"><i class="fa fa-expand"></i></a>
         <a class="btn btn-social-icon btn-bitbucket btnMinimizeToRight" title="Minimize"
             forFullScreen="#meetingScreen"><i class="fa fa-compress"></i></a>
+
         <a class="btn btn-social-icon btn-bitbucket btnShareVideo" title="Video"><i
                 class="glyphicon glyphicon-facetime-video"></i></a>
+        <a class="btn btn-social-icon btn-bitbucket btnUnShareVideo" title="Stop Video"><i
+                class="glyphicon glyphicon-facetime-video"></i></a>
+
         <a class="btn btn-social-icon btn-dropbox btnShareAudio" title="Audio"><i
                 class="fa fa-fw fa-microphone"></i></a>
+        <a class="btn btn-social-icon btn-dropbox btnUnShareAudio" title="Mute"><i
+                class="fa fa-fw fa-microphone"></i></a>
+
+        <a class="btn btn-social-icon btn-dropbox btnShareContent" title="Share Content"><i
+                class="fa fa-fw fa-slideshare"></i></a>
+        <a class="btn btn-social-icon btn-dropbox btnUnShareContent" title="Unshare Content"><i
+                class="fa fa-fw fa-slideshare"></i></a>
+
         <a class="btn btn-social-icon btn-flickr btnMeetingSignOut" title="Sign Out" style="margin-left: 50px;"><i
                 class="fa fa-fw fa-sign-out"></i></a>
         <a class="btn btn-social-icon btn-foursquare btnEndMeeting" title="End Meeting"><i
