In Progress - Chat

--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -36,23 +36,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
-                    <div class="box-body chat" id="chat-box" style="overflow: hidden; width: auto; height: 250px; display: flex; flex-direction: column;">
-                    </div>
-                    <div class="slimScrollBar"
-                        style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 224.82px;">
-                    </div>
-                    <div class="slimScrollRail"
-                        style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;">
-                    </div>
+                <div class="box-body chat" id="chat-box" style="overflow-y: auto; width: auto; height: 250px; display: flex; flex-direction: column;">
                 </div>
                 <!-- /.chat -->
                 <div class="box-footer">
-                    <div class="input-group">
-                        <input class="form-control" placeholder="Type message...">
-
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
+                    <div style="display: flex; flex-direction: column;">
+                        <div style="flex: 1; display: flex;"> 
+                            <div style="flex: 1;">
+                                <label style="margin-top: 5px;">Send&nbsp;To:&nbsp;</label>
+                            </div>
+                            <div style="flex: 5;">
+                                <select id="sendChatMessageTo" style="margin-bottom: 5px;" class="selectChatTo form-control"></select>
+                            </div>
+                        </div>
+                        <div class="input-group" style="flex: 1;">
+                            <input id="txtChatMessage" class="form-control" placeholder="Type message...">
+    
+                            <div class="input-group-btn"> 
+                                <button id="btnSendChatMessage" type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
