--- a/home.html
+++ b/home.html
@@ -418,6 +418,7 @@
   <script src="js/meetingroom/meetingRoom.js"></script>
   <script src="js/meetingroom/meetingLoader.js"></script>
   <script src="js/meetingroom/dataChunkSender.js"></script>
+  <script src="js/meetingroom/chatMessageWriter.js"></script>
 
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
