In Progress - Demo Sites

--- a/home.html
+++ b/home.html
@@ -460,6 +460,8 @@
   <script src="js/modules/submodules/UserUI.js"></script>
   <script src="js/modules/submodules/ConferenceRoomUI.js"></script>
 
+  <script src="js/modules/submodules/AdmissionUI.js"></script>
+
   <script src="js/main-initializer.js"></script>
 
   <script src="js/modules/PersonalDashboardUI.js"></script>
