In Progress - Demo Site (Merger to Dynamiko UI)

--- a/home.html
+++ b/home.html
@@ -459,6 +459,8 @@
   <script src="js/modules/submodules/TaxPeriodUI.js"></script>
   <script src="js/modules/submodules/UserUI.js"></script>
   <script src="js/modules/submodules/ConferenceRoomUI.js"></script>
+  <script src="js/modules/FacultyScheduleUI.js"></script>
+  <script src="js/modules/StudentScheduleUI.js"></script>
 
   <script src="js/modules/submodules/AdmissionUI.js"></script>
 
