In Progress - Demo Site

--- a/displaytabs/StudentScheduleUI-MainTemplate.html
+++ b/displaytabs/StudentScheduleUI-MainTemplate.html
@@ -24,7 +24,7 @@
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="FacultyScheduleUI" code=""><b>Virtual Class</b></a>
+                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="StudentScheduleUI" code=""><b>Virtual Class</b></a>
               </div>
             </div>
 
