--- a/displaytabs/tabs/ConferenceUI/MeetingRoom.html
+++ b/displaytabs/tabs/ConferenceUI/MeetingRoom.html
@@ -5,11 +5,11 @@
             <div style="position: absolute; bottom: 41px; left: 10px;" class="row">
                 <div class="col-md-1">
                     <video id="myVideo" class="miniVideoStream"
-                        style="min-height: 100px; max-height: 100px;; margin-bottom: 5px;" autoplay playsinline></video>
+                        style="min-height: 100px; max-height: 100px;; margin-bottom: 5px;" autoplay playsinline muted="muted"></video>
                 </div>
                 <div class="col-md-1" style="margin-left: 100px;">
                     <video id="screenVideo" class="miniVideoStream"
-                        style="min-height: 100px; max-height: 100px; margin-bottom: 5px;" autoplay playsinline></video>
+                        style="min-height: 100px; max-height: 100px; margin-bottom: 5px;" autoplay playsinline muted="muted"></video>
                 </div>
             </div>
         </div>
