--- a/home.html
+++ b/home.html
@@ -112,9 +112,26 @@
                 <i class="fa fa-upload"></i>
               </a>
             </li>
+            <li class="dropdown messages-menu quickCall">
+              <div class="input-group margin" style="width: 250px;  margin-top: 5px; margin-right: 15px;">
+                <div class="input-group" style="width: 100%;">
+                  <input rowindex="0" type="text" class="form-control autocomplete" name="quickCallByCode" placeholder="Type user here" 
+                    module="QuickCallUI" autoname="quickCallByCode" helptitle="quickCallByCode" style="border-radius: 10px 0px 0px 10px;">
+                    <span class="input-group-btn">
+                      <button type="button" id="btnQuickCall" class="btn btn-info btn-flat" style="border-radius: 0px 10px 10px 0px;">
+                        <i class="fa fa-phone"></i><span style="padding-left: 5px;">Call</span>
+                      </button>
+                    </span>
+                  </input>
+                  <input rowindex="0" id="quickCallCode" class="form-control editRecord HiddenAutoComplete" name="quickCallByCode" type="hidden" module="QuickCallUI" 
+                    autonamefield="quickCallByCode" value="">
+                  <div class="autocomplete-items" rowindex="0" module="QuickCallUI" autoname="quickCallByCode"></div>
+                </div>
+              </div>
+            </li>
             <li class="dropdown messages-menu myMeetingButtonGroup">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-users"></i><span style="padding-left: 15px;">Meeting</span>
+                <i class="fa fa-users"></i><span style="padding-left: 5px;">Video Con</span>
               </a>
               <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" id="myMeetings" style="max-height:700px; overflow-y:auto;">
               </ul>
@@ -122,24 +139,25 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image">
-                <span class="hidden-xs profileName">User</span>
+                <!-- <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image"> -->
+                Welcome <span class="hidden-xs profileName" style="font-weight: bold;">User</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
-                <li class="user-header">
+                <!-- <li class="user-header">
                   <img src="dist/img/user2-160x160.jpg" class="img-circle profilePicture" alt="User Image">
                   <p>
                     <span class="profileName">User</span> - <span class="profileWork">User</span>
                   </p>
-                </li>
+                </li> -->
                 <!-- Menu Body -->
                 <!-- Menu Footer-->
                 <li class="user-footer">
                   <!-- <div class="pull-left">
                     <a href="#" class="btn btn-default btn-flat">Profile</a>
                   </div> -->
-                  <div class="pull-right">
+                  <div class="text-center">
+                    <a href="#" class="btn btn-default btn-flat btnProfile">Profile</a>
                     <a href="#" class="btn btn-default btn-flat btnSignOut">Sign out</a>
                   </div>
                 </li>
@@ -420,6 +438,8 @@
   <script src="js/meetingroom/dataChunkSender.js"></script>
   <script src="js/meetingroom/chatMessageWriter.js"></script>
 
+  <script src="js/meetingroom/quickCall.js"></script>
+
   <script src="js/modules/AbstractUI.js"></script>
   <script src="js/modules/AbstractSubUI.js"></script>
 
@@ -462,7 +482,7 @@
   <script src="js/modules/FacultyScheduleUI.js"></script>
   <script src="js/modules/StudentScheduleUI.js"></script>
 
-  <script src="js/modules/submodules/AdmissionUI.js"></script>
+  <script src="js/modules/submodules/QuickCallUI.js"></script>
 
   <script src="js/main-initializer.js"></script>
 
